sesion5/curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
spec:
  containers:
    - name: curl
      image: curlimages/curl:latest
      command: ["sleep", "3600"]
