sesion5/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port
spec:
  selector:
    app: apache-server
  type: NodePort
  ports:
  - name: apache-server
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30007
