sesion5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip
spec:
  selector:
    app: apache-server
  #type: ClusterIP
  ports:
  - name: apache-server
    protocol: TCP
    port: 80
    targetPort: 80
